--- a/app/burger-menu.css
+++ b/app/burger-menu.css
@@ -57,20 +57,20 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 /* Individual item */
-.bm-item {
-  display: inline-block;
+.bm-item-list a {
+  display: block;
   height: 3rem;
   border-bottom: solid 1px #62150d;
   line-height: 3rem;
   text-align: right;
 }
-.bm-item:hover {
+.bm-item-list a:hover {
   color: ivory;
 }
 
 /* Styling of overlay */
 .bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 @media (min-width: 1201px) {
