--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@ body {
   background-size: cover;
   color: #252222;
   min-height: 100vh;
+  cursor: url('/images/glove_open.png'), auto;
 }
 header {
   @apply text-ivory;
@@ -136,6 +137,7 @@ a {
   @apply text-red;
   font-weight: bold;
   text-decoration: underline;
+  cursor: url('/images/glove_point.png'), auto;
 }
 
 #siteTitle a,
