--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,7 @@ textarea {
 
 .btn {
   @apply font-bold py-2 px-4;
+  cursor: url('/images/glove_point.png'), auto !important;
 }
 .btn-red {
   @apply bg-red text-ivory;
@@ -137,7 +138,7 @@ a {
   @apply text-red;
   font-weight: bold;
   text-decoration: underline;
-  cursor: url('/images/glove_point.png'), auto;
+  cursor: url('/images/glove_point.png'), auto !important;
 }
 
 #siteTitle a,
