--- a/app/globals.css
+++ b/app/globals.css
@@ -115,6 +115,7 @@ div {
 }
 #desktop-nav a:hover {
   color: ivory;
+  border-color: ivory;
 }
 input,
 textarea {
@@ -133,20 +134,55 @@ textarea {
 .btn-red:hover {
   @apply bg-red text-light-ivory;
 }
+.btn-transparent {
+  @apply text-gray-dark;
+  background-color: transparent;
+  padding: 0 1rem;
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+
+  @apply text-red;
+  border: solid 3px #121415;
+  font-family: 'Germania One', system-ui;
+  font-size: x-large;
+}
+.btn-transparent:before,
+.btn-transparent:after {
+  content: ' --- ';
+}
+
+.btn-transparent:hover {
+  color: #303436;
+  border: solid 3px #303436;
+  opacity: 0.9;
+}
 
 a {
   @apply text-red;
   font-weight: bold;
-  text-decoration: underline;
+  border-bottom: solid 2px #121415;
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
   cursor: url('/images/glove_point.png'), auto !important;
+  font-family: 'Germania One', system-ui;
+}
+a:hover {
+  opacity: 0.9;
+  border-bottom: solid 2px #303436;
 }
 
-#siteTitle a,
+#siteTitle a {
+  @apply text-ivory;
+  border: none;
+}
+
 nav a {
   @apply text-ivory;
   color: text-ivory;
   text-decoration: none;
   font-weight: 400;
+  font-family: 'Gelasio', serif;
+  padding: 1px 4px;
+  border-bottom: solid 2px #121415;
+  border-color: rgb(255 232 160 / var(--tw-text-opacity));
 }
 
 blockquote {
