--- a/app/globals.css
+++ b/app/globals.css
@@ -156,7 +156,33 @@ textarea {
   opacity: 0.9;
 }
 
-a, .link-style {
+input {
+  border-bottom: solid 2px #121415;
+  border-color: rgb(255 232 160 / var(--tw-text-opacity));
+  font-weight: bold;
+  border-bottom: solid 2px #121415;
+  border-radius: 255px 15px 225px 1px/15px 225px 15px 255px;
+  background-color: transparent;
+  @apply text-red;
+}
+
+input::placeholder {
+  color: darkslategray;
+  opacity: 0.8; /* Firefox */
+}
+
+label span {
+  font-weight: bold;
+  font-size: x-large;
+  font-family: 'Germania One', system-ui;
+}
+
+label input {
+  padding-left: 20px;
+}
+
+a,
+.link-style {
   @apply text-red;
   font-weight: bold;
   border-bottom: solid 2px #121415;
@@ -164,7 +190,8 @@ a, .link-style {
   cursor: url('/images/glove_point.png'), auto !important;
   font-family: 'Germania One', system-ui;
 }
-a:hover, .link-style:hover  {
+a:hover,
+.link-style:hover {
   opacity: 0.9;
   border-bottom: solid 2px #303436;
 }
