added number line example

--- a/app/globals.css
+++ b/app/globals.css
@@ -178,6 +178,16 @@ a.btn-style:hover {
   opacity: 0.9;
 }
 
+.btn.link-style {
+  @apply text-red;
+  font-weight: bold;
+  border-bottom: solid 2px #121415;
+  border-radius: 255px 15px 225px 1px/15px 225px 15px 255px;
+  cursor: url('/images/glove_point.png'), auto !important;
+  font-family: 'Germania One', system-ui;
+  padding: 0px;
+}
+
 a {
   @apply text-red;
   font-weight: bold;
